# aro-plugin-sdk-rust

./: Cargo.toml  README.md
aro-plugin-sdk/: Cargo.toml
aro-plugin-sdk-macros/: Cargo.toml
aro-plugin-sdk-macros/src/: lib.rs
aro-plugin-sdk/src/: error.rs  event.rs  ffi.rs  input.rs  lib.rs  output.rs  qualifier.rs  testing.rs
