[package]
name = "aro-plugin-sdk-macros"
version = "0.1.0"
edition = "2021"
description = "Proc-macro crate for the ARO plugin Rust SDK"
license = "MIT"
repository = "https://github.com/arolang/aro-plugin-sdk-rust"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
