[package]
name = "aro-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for building ARO plugins"
license = "MIT"
repository = "https://github.com/arolang/aro-plugin-sdk-rust"
keywords = ["aro", "plugin", "sdk"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aro-plugin-sdk-macros = { version = "0.1.0", path = "../aro-plugin-sdk-macros" }

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
